my-ingress-master.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-master
  annotations:
    nginx.org/mergeable-ingress-type: master
spec:
  rules:
  - host: my.host.com
